# CV-Task-1-Khana-Classification

./: .gitignore  README.md  data.py  diffusion_classify.py  evaluate.py  finetune_hires.py  metrics.py  pipeline.py  plots.py  predict.py  prepare_splits.py  pyproject.toml  requirements.txt  setup_env.ps1  setup_env.sh  test_images.py  tracker.py  train.py  utils.py
configs/: convnext_small.yaml  convnext_small_hires.yaml  debug.yaml
khana_classifier/: .gitignore  diffusion.py  diffusion_classify.py  engine.py  evaluate.py  finetune_hires.py  model.py  prepare_splits.py  pyproject.toml  utils.py
khana_classifier/configs/: convnext_small_hires.yaml
khana_classifier/scripts/: _bootstrap.py  diffusion_classify.py  evaluate.py  finetune_hires.py  prepare_splits.py  train.py
models/: best_ema.pt
models/320/: best_ema_hires.pt
models/384/: per_class_test.csv  results_test.json
splits/: manifest.json
