[project]
name = "khana-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "timm>=1.0.3",
    "mlflow>=2.14.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "scikit-learn>=1.5.0",
    "diffusers>=0.30.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pillow>=10.4.0",
]
