[project]
name = "khana-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "timm>=1.0.3",
    "mlflow>=2.14.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "scikit-learn>=1.5.0",
    "diffusers>=0.30.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pillow>=10.4.0",
]

# CUDA 12.6 build — compatible with CUDA 13.x drivers (backward compatible)
# torch and torchvision are pulled from the PyTorch CUDA index;
# everything else comes from PyPI as normal.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
